spacing issue

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -302,10 +302,10 @@ a{
 }
 .resume{
   .leftColumn{
-    width:100%;
+    width:95%;
   }
   .rightColumn{
-    width:100%;
+    width:95%;
   }
 }
 }
